--- a/src/components/pages/formateur/liste/listeFormateurs.css
+++ b/src/components/pages/formateur/liste/listeFormateurs.css
@@ -1,6 +1,8 @@
 .formateurs-container{
       width: 100%;
+      height: 77%;
       display: flex;
+      position: relative;
       flex-direction: column;
 }
 
@@ -23,7 +25,7 @@
       border-radius: 8px;
       background-color: rgba(33, 43, 54, 0.856);
 }
-.description-container > button{
+.description-container > a button{
       background-color: transparent;
       box-shadow:none ;
       display: inline-flex;
@@ -57,10 +59,10 @@
      
 }
 
-.description-container > button:hover{
+.description-container > a  button:hover{
       background-color: rgb(10, 148, 102);
 }
-.plusFormateur{
+a .plusFormateur{
       color: #ffffff;
       font-weight: 600;
        margin-right:4px ;
@@ -75,20 +77,22 @@
       align-items: center;
       padding: 0;
 }
-.filter-item-one{
+.filter-item-one {
       width: 93%;
-margin-right: 10px;
+      margin-right: 10px;
       height: 100%;
-    padding:0 10px ;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    box-shadow: 0 0 2px #5f5e5e42;
-}
-
-.filter-item-one:hover{
-    box-shadow: 0 0 2px rgba(0, 167, 111, 0.384);
-}
+      padding: 0 10px;
+      display: flex;
+      align-items: center;
+      border-radius: 5px;
+      transition: 0.3s;
+      box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1); /* Improved default shadow */
+    }
+    
+    .filter-item-one:hover {
+      box-shadow: 0 2px 2px rgba(0, 167, 111, 0.3); /* Enhanced hover shadow */
+    }
+    
 
 .filter-input{
       border: none;
@@ -132,11 +136,12 @@ margin-right: 10px;
 }
 
 .pagination{
-        /* background-color: red; */
+        position: absolute;
+        top: 100%;
+        width: 100%;
         display: flex;
         height: 60px;
         align-items: center;
-        /* background-color: aliceblue; */
         justify-content: flex-end;
 }
 
@@ -148,7 +153,7 @@ thead > tr{
     text-align: left;
     height: 55px;
     font-size: 15px;
-    color: rgb(99, 115, 129);
+    /* color: rgb(99, 115, 129); */
     font-weight: 600;
     background-color: rgb(244, 246, 248);
     width: 100%;
@@ -158,11 +163,17 @@ tbody > tr{
       vertical-align: inherit;
       height: 49px;
       position: relative;
-      color: rgb(99, 115, 129);
+      color: #000000dc;
+      /* color: rgb(99, 115, 129); */
 }
 
 tbody > tr:hover{
       background-color: rgb(244, 246, 248);
+}
+
+.container{
+         width: 100%;
+         height: 340px;
 }
 .edition{
         position: absolute;
@@ -183,3 +194,8 @@ tbody > tr:hover{
   background-color: #5f5e5e11;
 }
 
+.formateurs-table .loadingTrTbody{
+       width:600px;
+       height: 109px;
+      background-color:red,
+      }
