--- a/src/components/pages/formateur/liste/listeFormateurs.css
+++ b/src/components/pages/formateur/liste/listeFormateurs.css
@@ -199,3 +199,22 @@ tbody > tr:hover{
        height: 109px;
       background-color:red,
       }
+
+/* suprssion des element */
+
+.supressionData{
+ display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    padding-right: 10px;
+    border-bottom: 1px dashed rgb(241, 243, 244);
+
+    background: linear-gradient(135deg, rgba(91, 228, 155, 0.2), rgba(0, 167, 111, 0.2)) rgb(255, 255, 255);
+}
+
+.buttonSupprimer{
+        background-color: rebeccapurple;
+}
