--- a/src/components/pages/formateur/liste/listeFormateurs.css
+++ b/src/components/pages/formateur/liste/listeFormateurs.css
@@ -1,37 +1,37 @@
-.formateurs-container{
+/* Conteneur principal des formateurs */
+.formateurs-container {
       width: 100%;
       height: 77%;
       display: flex;
       position: relative;
       flex-direction: column;
-}
-
-.description-container{
-    width: 100%;
-    margin-top: 6px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1.1rem;
-    font-family: "Public Sans", sans-serif;  
-    color: #fff;
-    
-}
-
-.description-container > span{ 
+  }
+  
+  /* Conteneur de description */
+  .description-container {
+      width: 100%;
+      margin-top: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 1.1rem;
+      font-family: "Public Sans", sans-serif;
+      color: #fff;
+  }
+  
+  .description-container > span {
       width: 77%;
       height: 100%;
-      padding: 6px  30px;
+      padding: 6px 30px;
       border-radius: 8px;
       background-color: rgba(33, 43, 54, 0.856);
-}
-.description-container > a button{
+  }
+  
+  .description-container > a button {
       background-color: transparent;
-      box-shadow:none ;
+      box-shadow: none;
       display: inline-flex;
-      -webkit-box-align: center;
       align-items: center;
-      -webkit-box-pack: center;
       justify-content: center;
       position: relative;
       box-sizing: border-box;
@@ -56,221 +56,219 @@
       box-shadow: none;
       background-color: rgba(0, 167, 111, 0.897);
       color: rgb(255, 255, 255);
-     
-}
-
-.description-container > a  button:hover{
+  }
+  
+  .description-container > a button:hover {
       background-color: rgb(10, 148, 102);
-}
-a .plusFormateur{
+  }
+  
+  a .plusFormateur {
       color: #ffffff;
       font-weight: 600;
-       margin-right:4px ;
-}
-/* operation sur les elements filtre */
-
-.filter-container{
+      margin-right: 4px;
+  }
+  
+  /* Conteneur de filtre */
+  .filter-container {
       display: flex;
       width: 100%;
       margin: 21px 0;
       height: 43px;
       align-items: center;
       padding: 0;
-}
-.chargement{
+  }
+  
+  .chargement {
       width: 98%;
       height: 43px;
-}
-.chargement .filter-item-one {
-      width:97%;
+  }
+  
+  .chargement .filter-item-one {
+      width: 97%;
       height: 100%;
       padding: 0 10px;
       display: flex;
       align-items: center;
       border-radius: 5px;
       transition: 0.3s;
-      box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1); /* Improved default shadow */
-    }
-    
-    .filter-item-one:hover {
-      box-shadow: 0 2px 2px rgba(0, 167, 111, 0.3); /* Enhanced hover shadow */
-    }
-    
-    .filter-input{
+      box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .filter-item-one:hover {
+      box-shadow: 0 2px 2px rgba(0, 167, 111, 0.3);
+  }
+  
+  .filter-input {
       border: none;
       outline: none;
       width: 98%;
       margin: 0 6px;
       transition: 0.2s;
-      background-color:transparent;
-}
-
-
-.filter-button,.filter-search{
+      background-color: transparent;
+  }
+  
+  .filter-button,
+  .filter-search {
       font-size: 19px;
-}
-
-.filter-item-two{
-    width: 3%;
-    height: 100%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-.filter-menu{
+  }
+  
+  .filter-item-two {
+      width: 3%;
       height: 100%;
-      font-size:22px;
-}
-
-
-
-.filter-item-one .form-input-mui{
-       width: 100%;
-        height: auto;
-        box-shadow: none;
-
-}
-
-/* opration  sur le tableau */
-.formateurs-table{
-      /* background-color: red; */
-
-    width: 100%;
-}
-
-.pagination{
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        display: flex;
-        height: 60px;
-        align-items: center;
-        justify-content: flex-end;
-}
-
-thead > tr{
-    line-height: 1.5rem;
-    font-family: "Public Sans", sans-serif;
-    vertical-align: inherit;
-    border-bottom: 1px dashed rgb(241, 243, 244);
-    text-align: left;
-    height: 55px;
-    font-size: 15px;
-    /* color: rgb(99, 115, 129); */
-    font-weight: 600;
-    background-color: rgb(244, 246, 248);
-    width: 100%;
-}
-tbody > tr{
+      align-items: center;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .filter-menu {
+      height: 100%;
+      font-size: 22px;
+  }
+  
+  .filter-item-one .form-input-mui {
+      width: 100%;
+      height: auto;
+      box-shadow: none;
+  }
+  
+  /* Opération sur le tableau */
+  .formateurs-table {
+      width: 100%;
+  }
+  
+  .pagination {
+      position: absolute;
+      top: 100%;
+      width: 100%;
+      display: flex;
+      height: 60px;
+      align-items: center;
+      justify-content: flex-end;
+  }
+  
+  thead > tr {
+      line-height: 1.5rem;
+      font-family: "Public Sans", sans-serif;
+      vertical-align: inherit;
+      border-bottom: 1px dashed rgb(241, 243, 244);
+      text-align: left;
+      height: 55px;
+      font-size: 15px;
+      font-weight: 600;
+      background-color: rgb(244, 246, 248);
+      width: 100%;
+  }
+  
+  tbody > tr {
       font-family: "Public Sans", sans-serif;
       vertical-align: inherit;
       height: 49px;
       position: relative;
       color: #000000dc;
-      /* color: rgb(99, 115, 129); */
-}
-
-tbody > tr:hover{
+  }
+  
+  tbody > tr:hover {
       background-color: rgb(244, 246, 248);
-}
-
-.container{
-         width: 100%;
-         height: 340px;
-}
-.edition{
-        position: absolute;
-        right: 0;
-        top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
-}
-
-.edition .edition-button{
-       border-radius: 50%;
-     padding: 7px;
-     color: rgb(99, 115, 129);
+  }
+  
+  .container {
+      width: 100%;
+      height: 340px;
+  }
+  
+  .edition {
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 100%;
+      display: flex;
+      align-items: center;
+  }
+  
+  .edition .edition-button {
+      border-radius: 50%;
+      padding: 7px;
+      color: rgb(99, 115, 129);
       font-size: 30px;
-}
-.edition-button:hover{
-  background-color: #5f5e5e11;
-}
-
-.formateurs-table .loadingTrTbody{
-       width:600px;
-       height: 109px;
-      background-color:red,
-      }
-
-/* suprssion des element */
-
-.supressionData{
- display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 10px 0;
-    height: 60px;
-    padding-right: 10px;
-    border-radius: 3px 3px 0 0;
-    border-bottom: 1px dashed rgb(241, 243, 244);
-
-    background: linear-gradient(135deg, rgba(91, 228, 155, 0.2), rgba(0, 167, 111, 0.2)) rgb(255, 255, 255);
-}
-
-.buttonSupprimer{
-        background-color: rebeccapurple;
-}
-
-.buttonTH{ 
-      border:none;
+  }
+  
+  .edition-button:hover {
+      background-color: #5f5e5e11;
+  }
+  
+  .formateurs-table .loadingTrTbody {
+      width: 600px;
+      height: 109px;
+      background-color: red;
+  }
+  
+  /* Suppression des éléments */
+  .supressionData {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding: 10px 0;
+      height: 60px;
+      padding-right: 10px;
+      border-radius: 3px 3px 0 0;
+      border-bottom: 1px dashed rgb(241, 243, 244);
+      background: linear-gradient(135deg, rgba(91, 228, 155, 0.2), rgba(0, 167, 111, 0.2)) rgb(255, 255, 255);
+  }
+  
+  .buttonSupprimer {
+      background-color: rebeccapurple;
+  }
+  
+  .buttonTH {
+      border: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color:transparent
-}
-.buttonTH-icons{
-         font-size: 14px;
-         visibility: hidden;
-         margin-left: 4px;
-}
-.buttonTH-icons-rotate{
-        transform: rotate(180deg);
-}
-.iconsDiaplay{
-  visibility: visible;
-}
-
-/* rechercher node found .... */
-
-.empty-container {
+      background-color: transparent;
+  }
+  
+  .buttonTH-icons {
+      font-size: 14px;
+      visibility: hidden;
+      margin-left: 4px;
+  }
+  
+  .buttonTH-icons-rotate {
+      transform: rotate(180deg);
+  }
+  
+  .iconsDiaplay {
+      visibility: visible;
+  }
+  
+  /* Rechercher node found */
+  .empty-container {
       position: absolute;
-      display: flex; /* Arrange elements horizontally */
-      flex-direction: column; /* Stack elements vertically */
-      align-items: center; /* Center elements horizontally */
-      justify-content: center; /* Center elements vertically */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       width: 50%;
       left: 25%;
       top: 50%;
-      height: 40%; /* Ensure component fills viewport height */
-      background-color: #f5f5f5; /* Light gray background */
-      padding: 2rem; /* Add some padding */
-      border-radius: 5px; /* Rounded corners */
-      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
-    }
-    
-    .empty-container p {
-      font-size: 1rem; /* Adjust font size */
-      margin-top: 1rem; /* Add space between icon and text */
-      color: #333; /* Text color */
-    }
-    
-    .empty-container svg {
-      /* Customize icon styles (adjust based on library) */
-      color: #888; /* Adjust icon color */
-      width: 3rem; /* Adjust icon size */
-      height: 3rem; /* Adjust icon size */
-    }
-    
+      height: 40%;
+      background-color: #f5f5f5;
+      padding: 2rem;
+      border-radius: 5px;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  .empty-container p {
+      font-size: 1rem;
+      margin-top: 1rem;
+      color: #333;
+  }
+  
+  .empty-container svg {
+      color: #888;
+      width: 3rem;
+      height: 3rem;
+  }
+  
