--- a/src/components/pages/filiere/ajout/nouvelleFilieres.css
+++ b/src/components/pages/filiere/ajout/nouvelleFilieres.css
@@ -5,30 +5,29 @@
   --text-color: #000000;
 }
 
-.parentFormateur {
-  margin: 30px auto;
-  padding:20px 50px ;
+.parentFiliere { /* Modification du nom de la classe */
   display: flex;
-  width: 80%;
-  border-radius: 16px;
+  width: 100%;
+  padding: 0 10px;
   align-items: center;
   flex-direction: column;
-  box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 12px 24px -4px;}
+}
 
 .info .is-invalid-error {
   border-color: red;
 }
+
 .info .is-valid-confirm{
   border: 1px solid #ccc;
-
 }
-.formateur {
+
+.filiere { /* Modification du nom de la classe */
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.formateur h3 {
+.filiere h3 { /* Modification du nom de la classe */
   user-select: none;
   vertical-align: middle;
   font-weight: 700;
@@ -36,35 +35,31 @@
   font-size: 1.9rem;
   text-transform: unset;
   font-family: "Public Sans", sans-serif;
-
   text-align: left;
   margin: 15px 0;
   color:rgb(0, 167, 111);
- 
 }
 
 .label {
-      color: rgb(99, 115, 129);
+  color: rgb(99, 115, 129);
   margin-bottom: 10px;
   font-weight: 500;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
 
+.existData {
+  font-size: 13px;
+  color: red;
 }
-.existData{
-    font-size: 13px;
-    color: red;
-}
-.spanServerInput{
-   
-}
+
 .champsO {
   color: red;
 }
 
-.formaterChild {
+.filiereChild { /* Modification du nom de la classe */
   display: flex;
   flex-wrap: wrap;
   margin: 8px 0;
@@ -76,7 +71,7 @@
   width: 48%;
 }
 
-.infoEmail {
+.infoDescription { /* Modification du nom de la classe */
   width: 100%;
 }
 
@@ -99,7 +94,7 @@
   justify-content: flex-end;
 }
 
-.formaterChild .buttonMbut {
+.filiereChild .buttonMbut { /* Modification du nom de la classe */
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -124,8 +119,8 @@
   background-color: rgb(0, 167, 111);
 }
 
-.formaterChild .buttonMbut:hover {
-  background-color:rgba(0, 167, 111, 0.795);
+.filiereChild .buttonMbut:hover { /* Modification du nom de la classe */
+  background-color: rgba(0, 167, 111, 0.795);
 }
 
 .confirmation {
@@ -136,4 +131,3 @@
   color: var(--text-color);
   border-radius: 5px;
 }
-
