--- a/src/components/pages/formateur/liste/listeFormateurs.css
+++ b/src/components/pages/formateur/liste/listeFormateurs.css
@@ -250,17 +250,15 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      width: 50%;
-      left: 25%;
+      width: 60%;
+      left: 18%;
       top: 50%;
       height: 40%;
-      background-color: #f5f5f5;
       padding: 2rem;
       border-radius: 5px;
-      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
   }
   
-  .empty-container p {
+  /* .empty-container p {
       font-size: 1rem;
       margin-top: 1rem;
       color: #333;
@@ -271,4 +269,32 @@
       width: 3rem;
       height: 3rem;
   }
+   */
+
+   .sectionPopover{
+    
+padding: 10px;
+   }
   
+  .popover-title .titrePopover-div{
+    margin: 3px 0;
+ }
+  /* .popover-title div:nth-child(2){
+     display: flex;
+     flex-direction: column;
+  }
+  
+  */
+ /* .popover-title div  input[type="checkbox"] ,#all-teachers{
+    accent-color: rgba(0, 167, 111, 0.897) ;
+    padding: 30px;  
+} */
+
+.conatiner-input-popover{
+       display: flex;
+       align-items: center;
+}
+.button-popover{
+   font-size:12px;
+   text-transform: capitalize;
+}
