--- a/src/components/dashboard/navbartop/indexTop.css
+++ b/src/components/dashboard/navbartop/indexTop.css
@@ -1,38 +1,21 @@
 
-.info-profile {
+.info-profile-nav {
     height: 52px;
     margin: 14px 0;
-     width: 100%;
+    width: 100%;
     color: rgb(97, 105, 112);
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     font-size: 18px;
     border-radius: 10px;
     padding: 0 15px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.06) ,  0 -1px 0px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.06), 0 -1px 0px rgba(0, 0, 0, 0.03);
 }
 
 
-.info-profile-2,.info-profile-1{
-      display:flex;
-      height:100%;
-      align-items:center;
-}
-.info-profile-1 {
-    margin-right: 20px;
-    width:30%;
-    /* background-color:red; */
-}
-
-.info-profile-2 {
-    display: flex;
-    width:calc(100% - 30%);
-    /* background-color:blue; */
-    justify-content:flex-end;
-}
-
-.spanProfile {
+.profile-icon {
     margin: 0 5px;
     padding: 8px;
     transition: transform 0.1s ease-in-out;
@@ -42,8 +25,7 @@
     cursor: pointer;
 }
 
-
-.spanProfile:hover{
+.profile-icon:hover {
     background-color: rgba(0, 167, 111, 0.032);
 }
 
@@ -58,4 +40,27 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+.search-icon,
+.notification-settings-user-icons {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.search-icon {
+    margin-right: 20px;
+    width: 30%;
+    background-color: rgb(59, 69, 78);
+}
+
+.notification-settings-user-icons {
+    display: flex;
+    width: calc(100% - 30%);
+    justify-content: flex-end;
+}
+
+.user{
+   width: 60px;
 }
