--- a/src/components/pages/formateur/detail/listeFormateur.css
+++ b/src/components/pages/formateur/detail/listeFormateur.css
@@ -4,67 +4,25 @@
     height: 88%;
     display: flex;
     flex-direction: column;
+    /* background-color: #a7a5a5; */
 }
 
-
-
-/*profl containr*/
+.breadcrumbs{
+      margin:12px 0 ;
+}
 
 .container-profile{
   display: flex;
-  height: 68%;
-}
-/* Détail du profil */
-.profile-detail {
-    background-color: rgb(255, 255, 255);
-    color: rgb(33, 43, 54);
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    overflow: hidden;
-    position: relative;
-    box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 12px 24px -4px;
-    border-radius: 16px;
-    margin-bottom: 10px;
-    height: 30%;
-    background-image: url('../../../assets//cover_3.jpg');
-    background-position:center;
-    background-repeat: no-repeat;
-    position: relative;
-    display: flex;
-    align-items: center;
-
+  height: 95%;
+  padding-top: 10px;
 }
 
-.profile-detail::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    background-color: rgb(0, 0, 0,0.6);
-}
-
-.header-info{
-      z-index: 1000;
-      display: flex;
-      width: auto;
-      height: 80px;
-      margin-top: 5%;
-      padding: 10px;
-      margin-left: 3%;
-color: #ffffff;
-      flex-direction: column;
-}
-.header-info span:nth-child(1){
-    font-weight: 700;
-    font-size: 18px;
-}
 /* Conteneur de gauche */
 .nav-left-profile {
     width: 31%;
     margin-right: 20px;
     display: flex;
+    height: 95%;
     flex-direction: column;
 }
 
@@ -75,28 +33,23 @@ color: #ffffff;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     overflow: hidden;
     position: relative;
-    box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 12px 24px -4px;
+    box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 2px 3px -4px;
     border-radius: 16px;
     padding: 10px 0;
     text-align: center;
     margin-bottom: 10px;
     line-height: 1.5;
+    min-height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     font-family: "Public Sans", sans-serif;
 }
- 
-.nav-left-profile .nombre-module span:nth-child(1) {
-    font-size: 1.8rem;
-    font-weight: 700;
-} 
 
-.nav-left-profile .nombre-module span:nth-child(2) {
-    font-size: 15px;
-    color: rgb(72, 91, 110);
-} 
+
+ 
+
 
 /* À propos du formateur */
 .about-formateur {
@@ -109,12 +62,13 @@ color: #ffffff;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    height: 72%;
+    height: 55%;
     padding: 23px;
 }
 
 .about-formateur h5:nth-child(1){
     margin-left: 4px;
+    font-size: 17px;
     /* font-style: italic; */
 }
 .about-formateur .list-module-formateur{
@@ -150,31 +104,28 @@ color: #ffffff;
 
 /* Conteneur de droite */
 .nav-right-profile {
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     color: rgb(33, 43, 54);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     overflow: hidden;
     position: relative;
-    box-shadow: rgba(145, 158, 171, 0.2) 0px 0px 2px 0px, rgba(145, 158, 171, 0.12) 0px 12px 24px -4px;
-    border-radius: 16px;
-    padding: 10px 0;
+    border-radius: 5px;
     text-align: center;
     margin-bottom: 10px;
     line-height: 1.5;
     display: flex;
-    padding: 9px 29px;
+    padding:0;
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
     font-family: "Public Sans", sans-serif;
     width: 69%;
-    /* height: 100%; */
+    height: 95%;
 }
 .nav-right-profile .moduldisponible {
     width: 100%;
     height: 100%;
     padding: 0;
-
     overflow-y: scroll;
 }
 .moduldisponible::-webkit-scrollbar-thumb {
@@ -218,7 +169,7 @@ nav::-webkit-scrollbar-track {
     border-radius: 7px;
     align-items: center;
    
-    background-color: rgba(244, 246, 248, 0.267);
+    background-color: rgba(244, 246, 248, 0.075);
     ;
     justify-content: space-between;
 }
@@ -229,15 +180,32 @@ nav::-webkit-scrollbar-track {
 }
 
 
-.nav-right-profile h5:nth-child(1) {
-    user-select: none;
-    vertical-align: middle;
-    font-weight: 700;
-    line-height: 1.71429;
-    font-size: 1.4rem;
-    text-transform: unset;
-    text-align: left;
-    margin-top: 8px;
-    margin-bottom: 7px;
-    color: rgb(33, 43, 54);
+.nav-right-profile .filter-item-one {
+    width: 97%;
+    height: 100%;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    transition: 0.3s;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+.chargement-module{
+      margin-bottom: 10px;
+}
+
+
+
+.info-teacher{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 14px;
+    margin-top: 14px;
+}
+.info-teacher span:nth-child(1){  
+    color:#000000;
+    font-weight: 600;
 }
