--- a/src/components/pages/emplois/CreerEmplois.css
+++ b/src/components/pages/emplois/CreerEmplois.css
@@ -10,8 +10,9 @@
     align-items: center;
     justify-content: space-between;
     color: #fff;
-    height: 40px;
+    height: 70px;
     margin: 15px 0;
+    /* background-color: #004c6d; */
     color: #000000;
 }
 .div-emplois-body{   
@@ -24,6 +25,14 @@
   ;
   
 }
+
+.dateStyle{
+   margin-left: 10px;
+   font-size: 18px;
+   font-weight: 500;
+   color: #000;
+   border-radius: 10px;
+  }
 
 .groupe-module-section-emplois{  
      width: 24.5%;
@@ -75,7 +84,7 @@
   width: 100%;
   list-style: none;
   display: flex;
-  padding:  7px 10px;
+  padding:  6px 10px;
   font-size: 14px;
   border-radius: 7px;
   align-items: center; 
@@ -100,9 +109,7 @@
   padding: 6px 10px;
   background-color: rgb(244, 246, 248);
 
-  /* margin-top: -20px; */
-  margin: 10px 0;
-  line-height: 1.5;
+    line-height: 1.5;
   font-family: "Public Sans", sans-serif;
 }
 
@@ -114,17 +121,7 @@
 
 /* Gestion de secion de tabelau d'emplois ---- */
 
-.titreAlert{
-    display: flex;
-    height: 60px;
-    margin-bottom: 10px ;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #004c6d59;
-    padding: 10px;
 
-    border-radius: 5px;
-}
 .schedule-table {
   border-collapse: collapse;
   cursor:all-scroll;
@@ -203,10 +200,7 @@
 
   transition: background-color 0.3s ease; /* Transition douce pour le changement de couleur */
 }
-.publication-emplois{  
-  width: 40%;
-  text-align: end;
-}
+
 /* thead tr{
     background-color: #0f1e2b;
     color: #ffffff;
