--- a/src/components/pages/emplois/Disponibilte.css
+++ b/src/components/pages/emplois/Disponibilte.css
@@ -27,9 +27,11 @@
 }
 
 .type-PRE{ 
+  cursor:default;
     background-color:rgba(0, 139, 139, 0.699);
 }
 .type-FAD{ 
+    cursor:default;
     background-color:rgba(148, 0, 211, 0.699);
 }
 
