--- a/src/components/pages/emplois/tableEmplois/InterfaceEmplois.css
+++ b/src/components/pages/emplois/tableEmplois/InterfaceEmplois.css
@@ -26,7 +26,8 @@
   justify-content: center;
   font-weight: 600;
   font-size: 16px;
-  background-color: black;
+  background-color: rgb(199, 194, 194);
+  color: black;
   border-bottom: 1px solid #ffff;
   border-right: 1px solid #ffff;
 
@@ -34,12 +35,13 @@
 }
 
 .headerEmplois .HeureEmplois{
-  background-color: black;
+  background-color: rgb(199, 194, 194);
    width: 900px;
    height: 100%;
    display: flex;
    font-weight: 600;
    font-size: 13px;
+   color: black;
 }
 .hourEmploisSpan{
   height: 100%;
@@ -50,7 +52,7 @@
 }
 .dayEmploisSpan{
    height: 51.66px;
-   background-color:black;
+   background-color:rgb(199, 194, 194);
    display: flex;
    align-items: center;
    justify-content: flex-start;
@@ -58,16 +60,18 @@
    font-weight: 600;
    font-size: 16px;
    border-bottom: 1px solid #ffff;
+   color: black;
 }
 .dayEmplois{
      width: calc(100% - 900px);
-     background-color: black;
+     background-color: rgb(199, 194, 194);
+     color: black;
 }
 
 .containerEmplois {
   width: 900px;
   height: 310px;
-  background-color: aquamarine;
+  background-color: #fff;
   margin: auto;
   position: relative;
   display: flex;
@@ -79,11 +83,13 @@
   position: absolute;
   height: 51.66px;
   border-radius: 5px;
-  background-color: blue;
+  background-color: gray;
 }
 .SpanSeanceGroupe{
   position:absolute;
-  background-color:dodgerblue;
+  /* background-color:rgb(98, 150, 202); */
+  background-color:rgb(95, 99, 104);
+  /* background-color:rgb(55, 58, 52); */
   height:51.66px;
   border: 1px solid gray;
   border-radius: 5px;
@@ -120,4 +126,17 @@
 }
 .publication-emplois button{
   margin-left: 10px;
+}
+
+.supprimerEmplois{
+      top: -10px;
+      left: -2px;
+      width: 100%;
+}
+.seanceSelected{
+   background-color: palevioletred;
+}
+
+.backgroundSeanceFAD{
+  background-color: rgb(55, 58, 52);
 }
